# exadg_apps

./: .gitignore  CMakeLists.txt  README.md
applications/acoustic_conservation_laws/pml/: application.h  input.json  solver.cpp
applications/acoustic_conservation_laws/valley/: application.h  audio.csv  audio_cube.csv  audio_with_trajectory_valley.csv  cube_1m.e  input.json
